# learn-agents

./: COVERAGE_REVIEW.md  README.md  generate_tutorial_notebooks.py  pyproject.toml
notebooks/: 00_course_orientation.ipynb  01_prompt_chaining.ipynb  02_routing.ipynb  03_parallelization.ipynb  04_reflection.ipynb  05_tool_use_function_calling.ipynb  06_planning.ipynb  07_multi_agent_collaboration.ipynb  08_memory_management.ipynb  09_learning_and_adaptation.ipynb  10_model_context_protocol_mcp.ipynb  11_goal_setting_and_monitoring.ipynb  12_exception_handling_and_recovery.ipynb  13_human_in_the_loop.ipynb  14_knowledge_retrieval_rag.ipynb  15_inter_agent_communication_a2a.ipynb  16_resource_aware_optimization.ipynb  17_reasoning_techniques.ipynb  18_guardrails_safety_patterns.ipynb  19_evaluation_and_monitoring.ipynb  20_prioritization.ipynb  21_exploration_and_discovery.ipynb  22_evaluation_reliability_deep_dive.ipynb  23_voice_ai_fundamentals.ipynb  24_structured_output_model_agnostic.ipynb  25_embeddings_clustering_themes.ipynb  26_mapreduce_summarization_confidence.ipynb  27_systems_design_voice_platform.ipynb  28_production_agent_harness.ipynb  29_advanced_production_rag.ipynb  30_finetuning_routing_prompt_optimization.ipynb  A_appendix_a_advanced_prompting.ipynb  B_appendix_b_agentic_interactions.ipynb  CODE_AUDIT.md  C_appendix_c_quick_reference.ipynb  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CHECKLIST.md  D_appendix_d_building_an_agent.ipynb  E_appendix_e_ai_agents_on_the_cli.ipynb  FRAMEWORK_LANDSCAPE.md  (+3 more)
scripts/: add_alternative_framework_examples.rb  (+2 more)
(+48 files in other folders)
