[project]
name = "learn-agents"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
  "langchain[openai]>=1.3.13,<1.4",
  "langgraph>=1.2.9,<1.3",
  "langsmith>=0.10.2,<0.11",
  "deepagents>=0.5.9,<0.6",
]

[dependency-groups]
dev = [
  "ipykernel>=6.30",
  "jupyterlab>=4.4",
  "pytest>=8.4",
]

[project.optional-dependencies]
alternatives = [
  "openai-agents[voice]>=0.18.2,<0.19",
  "pydantic-ai>=2.9.0,<3",
  "llama-index>=0.14.23,<0.15",
  "google-adk[a2a]>=2.4.0,<3",
  "agno>=2.7.2,<2.8",
]
